# c-string

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: c-string.c.E19FE869DC98A2D4.idx  c-string.h.CC2AFBE9B61ADFCF.idx
examples/: with-macros.c  without-macros.c
include/: c-string-macros-wrappers.h  c-string-utils.h  c-string.h
src/: c-string-utils.c  c-string.c  string.c  string.h
tests/: CMakeLists.txt  unit-test.c  unit_test.c
tests/.cache/clangd/index/: unit-test.c.5D85B7CD57E1AA64.idx  unit-test.c.CF0024D64C9A6CE7.idx  unit_test.c.BF9EF9A59B428C54.idx
tests/system/: CMakeLists.txt  system_test.c
tests/system/.cache/clangd/index/: system_test.c.9F4F326F9047B8BE.idx
tests/unit/: CMakeLists.txt  unit_tests.c
tests/unit/.cache/clangd/index/: unit_tests.c.15DB78D3D5B0891A.idx
