cmake_minimum_required(VERSION 4.0)
project(c-string VERSION 4.0.0 LANGUAGES C)
add_compile_options(-Wall -Wextra -Werror -Wconversion -Wunused-result)
add_library(c-string STATIC ${PROJECT_SOURCE_DIR}/src/c-string.c)
target_include_directories(c-string PUBLIC ${PROJECT_SOURCE_DIR}/include)
add_subdirectory(tests)
install(TARGETS c-string DESTINATION lib)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ DESTINATION include)
# install(FILES ${PROJECT_SOURCE_DIR}/README.md DESTINATION /usr/share/doc/c-string)
install(FILES ${PROJECT_SOURCE_DIR}/README.md DESTINATION doc/c-string)
